# otus_mlops

./: README.md
DZ_5/: .gitignore  Makefile  README.md  main.py  pyproject.toml
DZ_5/.github/workflows/: main.yml
DZ_5/dags/: data_clean_pipeline.py
DZ_5/infra/: main.tf  variables.tf
DZ_5/requirements/: requirements-dev.txt
DZ_5/src/: pyspark_script.py
DZ_6/: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
DZ_6/artifacts/model/: MLmodel  conda.yaml  requirements.txt
DZ_6/artifacts/model/sparkml/metadata/: part-00000  part-00000.crc
DZ_6/artifacts/model/sparkml/stages/0_VectorAssembler_1ba4d05448de/metadata/: part-00000  part-00000.crc
DZ_6/artifacts/model/sparkml/stages/1_StandardScaler_ae797c62a9cc/data/: part-00000-aa4facd4-9115-4f8c-9c34-6c3a0699cb3d-c000.snappy.parquet.crc
DZ_6/artifacts/model/sparkml/stages/1_StandardScaler_ae797c62a9cc/metadata/: part-00000  part-00000.crc
DZ_6/artifacts/model/sparkml/stages/2_RandomForestClassifier_c236d833e68b/metadata/: part-00000  (+1 more)
DZ_6/dags/: training_pipeline.py
DZ_6/scripts/: create_venv_archive.sh
DZ_6/src/: train.py
ДЗ №1/: README.md
ДЗ №2/: README.md
ДЗ №2/infrastructure/: README.md  main.tf  variables.tf
ДЗ №2/infrastructure/scripts/: user_data.sh
ДЗ №3/: README.md  data-analys.ipynb
ДЗ №3/infrastructure/: main.tf  variables.tf
ДЗ №3/infrastructure/scripts/: prepare_data_and_save_to_bucket.py  user_data.sh
ДЗ №4/: README.md  example.ipynb
ДЗ №4/feature_store/feature_repo/: example_repo.py
ДЗ №4/feature_store/feature_repo/data/: fraud_snap.parquet
(+20 files in other folders)
