[project]
name = "dz-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3==1.35.63",
    "ipykernel==6.29.5",
    "loguru==0.7.2",
    "pynacl==1.5.0",
    "python-dotenv==1.0.1",
    "requests>=2.32.3",
    "s3cmd>=2.4.0",
]
